fix(scope): expose only ethereum and solana
